# pre-authorized-debit

./: .editorconfig  .eslintrc  .gitignore  .lintstagedrc  .pnp.cjs  Anchor.toml  Cargo.toml  SECURITY.md  package-lock.json  package.json  readme.md  tsconfig.json
.cargo/: config.toml
.github/: CODEOWNERS  program-tests.yml
.github/workflows/: program-tests.yml  sdk-tests.yaml  tests.yml
.husky/: pre-commit
program-tests/pre-authorized-debit-v1/: .nycrc  close-pre-authorization.test.ts  close-smart-delegate.test.ts  debit.test.ts  debit.ts  init-pre-authorization.test.ts  init-smart-delegate.test.2.ts  init-smart-delegate.test.ts  package.json  pre-authorized-debit-v1.ts  setup.ts  update-pause-pre-authorization.test.ts  utils.ts
program-tests/smart-account-v1/: README.md  package.json  smart-account-v1.ts
programs/pre-authorized-debits-v1/: Cargo.toml
programs/pre-authorized-debits-v1/src/: errors.rs  lib.rs
programs/pre-authorized-debits-v1/src/instructions/: close_pre_authorization.rs  close_smart_delegate.rs  debit.rs  init_pre_authorization.rs  init_smart_delegate.rs  mod.rs  revoke_pre_authorization.rs  update_pause_pre_authorization.rs
programs/pre-authorized-debits-v1/src/state/: mod.rs  pre_authorization.rs  smart_delegate.rs
scripts/: .gitignore  e2e.ts  fetchOnChainIdl.ts  logs.txt  package.json  parseLogs.ts  test.js  tsconfig.json  verifyMainnetEvents.ts
tests/: seabed-program-library.ts  smart-account-v1.ts
testutils/: index.ts  package.json  tsconfig.json
web/: next.config.js  package.json  tsconfig.json  vercel.json
(+166 files in other folders)
