[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
overflow-checks = true
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev]
overflow-checks = true
[profile.test]
overflow-checks = true
[profile.bench]
overflow-checks = true